--- a/src/scss/components/mailBox.scss
+++ b/src/scss/components/mailBox.scss
@@ -4,6 +4,10 @@
   box-shadow: 0px 4px 20px #a5aeb3;
   display: flex;
   flex-flow: column;
+  height: 100vh;
+  section {
+    overflow: scroll;
+  }
 }
 
 .searchBar {
