--- a/src/scss/components/mailDetails.scss
+++ b/src/scss/components/mailDetails.scss
@@ -5,7 +5,7 @@
 }
 .options {
   display: flex;
-  padding: 22px;
+  padding: 1.8em;
   border-bottom: 1px solid #c7dada;
   justify-content: space-between;
   button {
@@ -14,15 +14,52 @@
     border-radius: 3px;
     border: 1px solid #c7dada;
   }
+  #del {
+    font-weight: bold;
+    background-color: $red;
+    color: #fff;
+  }
+
+  #und {
+    font-weight: bold;
+    background-color: $blue;
+    color: #fff;
+  }
+  button:hover {
+    padding: 3px 8px;
+  }
+  #del:active,
+  #und:active,
+  button:active {
+    box-shadow: inset 0 0 0 1000px #00000033;
+  }
 }
-#del {
-  font-weight: bold;
-  background-color: $red;
-  color: #fff;
+.body,
+.attachments {
+  margin: 1.8em;
+  padding: 1em;
+  background-color: white;
 }
 
-#und {
-  font-weight: bold;
-  background-color: $blue;
-  color: #fff;
+.body {
+  min-height: 50vh;
+  div {
+    color: rgb(110, 110, 110);
+    font-size: larger;
+    font-style: italic;
+    text-align: right;
+  }
+}
+.attachments {
+  display: flex;
+  justify-content: flex-start;
+
+  div {
+    padding: 0 4px;
+    a {
+      color: $blue;
+      font-weight: bold;
+      text-decoration: none;
+    }
+  }
 }
