--- a/src/scss/components/senderDetails.scss
+++ b/src/scss/components/senderDetails.scss
@@ -1,15 +1,28 @@
 .sender {
-  padding: 1em;
+  padding: 1.8em;
   margin-bottom: 20px;
+  border-bottom: 1px solid #c7dada;
   display: flex;
   flex-flow: row;
-
+  justify-content: space-between;
+  .imgContainer {
+    margin-right: 1em;
+    margin-left: 6px;
+  }
   img {
     box-shadow: 0px 4px 20px #a5aeb3;
-    margin-right: 0.6em;
   }
   div {
     display: flex;
     flex-flow: column;
+    margin-right: 8px;
+  }
+  h2,
+  h4 {
+    margin: 0;
+  }
+  h4 {
+    margin-top: 5px;
+    text-align: right;
   }
 }
