--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,5 +6,5 @@ body {
   font-family: Helvetica, sans-serif;
   font-size: 12px;
   color: #3b3d3f;
-  background-color: $gray;
+  background-color: white;
 }
