--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -6,5 +6,9 @@ body {
   font-family: Helvetica, sans-serif;
   font-size: 12px;
   color: #3b3d3f;
-  background-color: white;
+  background-color: #fff;
+}
+.email-client {
+  height: 100vh;
+  display: flex;
 }
