--- a/src/scss/components/mailDetails.scss
+++ b/src/scss/components/mailDetails.scss
@@ -4,6 +4,8 @@
   width: 60%;
 }
 .options {
+  animation: moveIn 0.8s ease-out 0.9s;
+  animation-fill-mode: backwards;
   display: flex;
   padding: 1.8em;
   border-bottom: 1px solid #c7dada;
@@ -14,6 +16,7 @@
     border-radius: 3px;
     border: 1px solid #c7dada;
   }
+
   #del {
     font-weight: bold;
     background-color: $red;
@@ -68,4 +71,18 @@
   text-align: center;
   font-size: x-large;
   width: 60%;
+  animation: moveIn 0.4s ease-out 0.75s;
+  animation-fill-mode: backwards;
+}
+
+@keyframes moveIn {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
